# LinearAnalysis-ThermoCompConv

./: .gitignore  CMakeLists.txt  ERRORCODES  README  TODO  version.h.in
DX/: CMakeLists.txt  glo-ur-eq.net.in
DoubleDiffConv/: .gitignore  CMakeLists.txt  COM.calc.plot.ArdesFig3  Doxyfile.in  Makefile  growthRate.f90  imsl.F  imsl.f90  io.f90  lolo.F  losub-inc.h  losub.F  losub.f90  m3e04p01t12000Rconc1000Le  main.f90  minimizer.f90  parameters.f90  pegasus.F  r.F  r.f90
DoubleDiffConv/ATTIC/: linearProblem.f90
DoubleDiffConv/ri-Theta-Gamma_ro-Theta-Gamma/: COM.calc.plot.ArdesFig4c  Makefile  losub.F  r.F
DoubleDiffConv/scripts/: COM.calc.plot  COM.calc.plot.ArdesFig3
DoubleDiffConv/src/: CMakeLists.txt  growthRate.f90  include.mk  io.f90  main.f90  minimizer.f90  parameters.f90
PLOTTINGcode/: SPHERICAL_idl_lara.pro  idl_lara.pro  lara_estream.f  readla.f
Papers/: TODO
docs/: userManual.tex
docs/figs/: TemperatureProfiles.gpi
forLuisSilva/DoubleDiffConv/ri-Theta-Gamma_ro-Theta-Gamma/: 0.README  COM.calc.plot  imsl.F  lolo.F  losub.F  pegasus.F  r.F
forLuisSilva/PLOTTINGcode/: lara  lara_estream....SAVE....f  plms.f  plotCOM.radial
scripts/: COM.3eigmodes  COM.calc.plot  COM.calc.plot-lapack  COM.calc.plot.ArdesFig3  COM.calc.plot.ArdesFig4c  DEC.EQUATORIALplot  calcAll.sh  calcSpeciffic-lapack-min.sh  calcSpeciffic-lapack.sh  calcSpeciffic.sh  glo_wrap.sh  lock_or_die.sh  modeTrackerDriver.sh  plotCOM  plotCOM.radial  sortBy.sh
src/: CMakeLists.txt  CritRaEff.f90  CritRaEff_io.f90  Makefile  errorcodes.h  glo.f90  glo_constants.f90  growthRate.f90  growthRate_RaEff.f90  imsl.F  io.f90  lara_estream.f  losub-inc.h  losub.F  losub.f90  main.f90  minimizer.f90  parameters.f90  parser.f90  r.f90
src-old/: imsl.f90  losub.f90
src/lapack/: CMakeLists.txt  include.mk
src/modeTracker/: CMakeLists.txt  main.f90
src/plotting/: CMakeLists.txt  Makefile  glo_compute_and_plot.f90  glo_plot.f90  input.f  input.f.save  input.f90  lara_estream.f  lara_estream.f90  makefile  modePlotter.f90  plms.f  plms.f90  readla.f90  simplePlot.f90
src/ri-Theta-Gamma_ro-Theta-Gamma/: COM.calc.plot.ArdesFig3  r.F
src/test/: CMakeLists.txt  testFunctions.f90  testMatrixGeneration.f90  testMinimizer.f90
src/test/data/: ZA_ref.txt  ZB_ref.txt
src/utilities/: giveMeM.f90
templates/: jobscript.sh  lo1-Le=0.3-Rc=1.0e2-0.conf  lo1-Le=0.3-Rc=1.0e2-new.conf  lo1-Le=0.3-Rc=1.0e2.conf
